Fix z-index

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,6 +18,7 @@ aside {
 }
 .AppItem {
   &:nth-child(1) {
+    z-index: 200;
   }
   &:nth-child(2) {
     display: flex;
